# RandomNumberGenerator

./: CMakeLists.txt  README.md  plot.py  randomNum.txt  randomNumGenerator.cu
plotting/: plot_uniform_gaussian.py
src/: RNG.cu  a.out  app  plot.py  plotUniform_Gaussian.py  randomNum.txt  randomNumGenerator.cu
